--- a/mall-config-server/pom.xml
+++ b/mall-config-server/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.wangheng</groupId>
-    <artifactId>mall-eureka-service</artifactId>
+    <artifactId>mall-config-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mall-eureka-service</name>
-    <description>服务注册中心</description>
+    <name>mall-config-server</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
 
         <dependency>
