--- a/mall-user-service/pom.xml
+++ b/mall-user-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.wangheng</groupId>
-    <artifactId>mall-eureka-server</artifactId>
+    <artifactId>mall-user-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mall-eureka-server</name>
-    <description>服务注册中心</description>
+    <name>mall-user-service</name>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
