--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>spring-cloud-Mall</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>mall-eureka-server</module>
+        <module>mall-user-service</module>
+    </modules>
 
 </project>
